fix: Nasty Safari horizontal scrolling

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -12,6 +12,7 @@ body {
   top: 1rem;
   left: 1rem;
   margin-bottom: 3rem;
+  width: calc(100% - 2rem); // fix safari bug
 
   img {
     height: 5rem;
